[metadata]
name = smartbox_monorepo
version = 0.1.0
description = Refactored version of the Smartbox Python services in a single repo.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WoW-Institute-of-Systems-and-Robotics/smartbox_monorepo
author = José Faria
author_email = jose.faria@isr.uc.pt
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    bleak
    asyncio
    paho-mqtt
    motor
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    smartbox_init_services = smartbox_monopy.main:entrypoint

[coverage:run]
omit = .venv/*
